feat(backend): fetch exchange rates
